# aiida-human-in-the-loop

./: README.md  pyproject.toml
examples/: auto_guess.py  submit_workflow.py
src/aiida_humanintheloop/: __init__.py
src/aiida_humanintheloop/workflows/: __init__.py  human_loop.py
